backend/service/service-identity/deploy/production/middleware-host.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: service-identity-host
  namespace: typewriter
spec:
  headers:
    customRequestHeaders:
      Host: service-identity.typewriter.svc
